--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="app">
         <h1>
             Quiz Time
-            <p>(Total 10 Q's chusi attempt cheyaku ardhamaindha !)</p>
+            <p>Total of 10 questions!</p>
         </h1>
         <div class="quiz">
             <h2 id="question">Question goes here</h2>
